# airlock

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.agent  Dockerfile.controller  Dockerfile.daemon  Dockerfile.runtime  Dockerfile.shim  README.md  SECURITY.md  install.sh
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS
.github/workflows/: cflite_pr.yml  ci.yml  release.yml  scorecard.yml
crates/airlock-agent/: Cargo.toml
crates/airlock-agent/src/: execute.rs  main.rs
crates/airlock-controller/: Cargo.toml
crates/airlock-controller/examples/: gen_crd.rs
crates/airlock-controller/src/: crd.rs  grpc.rs  job.rs  keepalive.rs  lib.rs  main.rs  registry.rs  state.rs  watcher.rs
crates/airlock-controller/tests/: grpc_integration.rs
crates/airlock-daemon/: Cargo.toml
crates/airlock-daemon/src/: config.rs  doctor.rs  hooks.rs  init.rs  lib.rs  logging.rs  main.rs  paths.rs  profile.rs  registration.rs  test.rs  why.rs
crates/airlock-daemon/src/commands/: builtin.rs  deny.rs  mod.rs  module.rs  registry.rs
crates/airlock-daemon/src/commands/builtins/aws/: SECURITY.md  module.toml
crates/airlock-daemon/src/commands/builtins/docker/: SECURITY.md  module.toml
crates/airlock-daemon/src/commands/builtins/git/: SECURITY.md  module.toml
crates/airlock-daemon/src/commands/builtins/ssh/: SECURITY.md  module.toml
crates/airlock-daemon/src/commands/builtins/terraform/: SECURITY.md  module.toml
crates/airlock-daemon/tests/: integration.rs
crates/airlock-proto/: Cargo.toml
crates/airlock-runtime/: Cargo.toml
crates/airlock-runtime/src/: execute.rs  main.rs
crates/airlock-shim/: Cargo.toml
crates/airlock-shim/src/: lib.rs  main.rs
deploy/: rbac.yaml
docs/: index.html
examples/chambers/: git-ops.yaml  workspace-ro.yaml  workspace-rw.yaml
examples/tools/: git-checkout-branch.yaml  git-commit.yaml  git-push.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_and_deny.rs  fuzz_parse_profile.rs  fuzz_parse_request.rs
images/git/: Dockerfile
