[package]
name = "airlock-agent"
version.workspace = true
edition.workspace = true

[dependencies]
airlock-proto = { path = "../airlock-proto" }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
