[package]
name = "airlock-controller"
version.workspace = true
edition.workspace = true

[dependencies]
airlock-proto = { path = "../airlock-proto" }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
kube = { version = "3.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
schemars = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["net"] }

[lints]
workspace = true
